recursion.cons.increasing.Increasing.scala.error
Erreur de compilation :
Increasing:4: error: type mismatch;
 found   : Int
 required: Boolean
    if (l.tail == Nil) return last;
                              ^